8232757: VM fails to report an error for DumpLoadedClassList when cds is disabled

Reviewed-by: iklam, dholmes